virtual-waiting-room-infrastructure/src/main/java/cn/zcn/virtual/waiting/room/infrastructure/redis/ast/LuaParser.java
/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package cn.zcn.virtual.waiting.room.infrastructure.redis.ast;

import java.util.List;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class LuaParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
    public static final int LPAREN = 1,
            RPAREN = 2,
            COLON = 3,
            COMMA = 4,
            DOT = 5,
            LBRACK = 6,
            RBRACK = 7,
            LBRACE = 8,
            RBRACE = 9,
            SEMICO = 10,
            TK_DO = 11,
            TK_END = 12,
            TK_WHILE = 13,
            TK_REPEAT = 14,
            TK_UNTIL = 15,
            TK_IF = 16,
            TK_THEN = 17,
            TK_ELSE = 18,
            TK_ELSEIF = 19,
            TK_FOR = 20,
            TK_IN = 21,
            TK_FUNCTION = 22,
            TK_LOCAL = 23,
            TK_RETURN = 24,
            TK_BREAK = 25,
            TK_NIL = 26,
            EQUAL = 27,
            TRUE = 28,
            FALSE = 29,
            OP_ADD = 30,
            OP_SUB = 31,
            OP_MUL = 32,
            OP_DIV = 33,
            OP_MOD = 34,
            OP_POW = 35,
            OP_CONCAT = 36,
            DOTS = 37,
            TK_LT = 38,
            TK_LE = 39,
            TK_GT = 40,
            TK_GE = 41,
            TK_EQ = 42,
            TK_NEQ = 43,
            TK_AND = 44,
            TK_OR = 45,
            TK_NOT = 46,
            TK_LEN = 47,
            NAME = 48,
            NORMALSTRING = 49,
            CHARSTRING = 50,
            LONGSTRING = 51,
            INT = 52,
            HEX = 53,
            FLOAT = 54,
            SHORT_COMMENT = 55,
            LONG_COMMENT = 56,
            WS = 57,
            SHEBANG = 58;
    public static final int RULE_file = 0,
            RULE_chunk = 1,
            RULE_block = 2,
            RULE_stat = 3,
            RULE_laststat = 4,
            RULE_blockstat = 5,
            RULE_ifstat = 6,
            RULE_whilestat = 7,
            RULE_repeatstat = 8,
            RULE_functionstat = 9,
            RULE_forstat = 10,
            RULE_foriterdef = 11,
            RULE_forbody = 12,
            RULE_localfunctionstat = 13,
            RULE_localstat = 14,
            RULE_namelist = 15,
            RULE_functionname = 16,
            RULE_dotfield = 17,
            RULE_colonfield = 18,
            RULE_funcbody = 19,
            RULE_param = 20,
            RULE_assignexpr = 21,
            RULE_cond = 22,
            RULE_expr = 23,
            RULE_primaryexp = 24,
            RULE_prefixexp = 25,
            RULE_funcargs = 26,
            RULE_recfield = 27,
            RULE_listfield = 28,
            RULE_constructor = 29,
            RULE_fieldsep = 30,
            RULE_yindex = 31,
            RULE_unop = 32,
            RULE_number = 33,
            RULE_string = 34;

    private static String[] makeRuleNames() {
        return new String[] {
            "file",
            "chunk",
            "block",
            "stat",
            "laststat",
            "blockstat",
            "ifstat",
            "whilestat",
            "repeatstat",
            "functionstat",
            "forstat",
            "foriterdef",
            "forbody",
            "localfunctionstat",
            "localstat",
            "namelist",
            "functionname",
            "dotfield",
            "colonfield",
            "funcbody",
            "param",
            "assignexpr",
            "cond",
            "expr",
            "primaryexp",
            "prefixexp",
            "funcargs",
            "recfield",
            "listfield",
            "constructor",
            "fieldsep",
            "yindex",
            "unop",
            "number",
            "string"
        };
    }

    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[] {
            null,
            "'('",
            "')'",
            "':'",
            "','",
            "'.'",
            "'['",
            "']'",
            "'{'",
            "'}'",
            "';'",
            "'do'",
            "'end'",
            "'while'",
            "'repeat'",
            "'until'",
            "'if'",
            "'then'",
            "'else'",
            "'elseif'",
            "'for'",
            "'in'",
            "'function'",
            "'local'",
            "'return'",
            "'break'",
            "'nil'",
            "'='",
            "'true'",
            "'false'",
            "'+'",
            "'-'",
            "'*'",
            "'/'",
            "'%'",
            "'^'",
            "'..'",
            "'...'",
            "'<'",
            "'<='",
            "'>'",
            "'>='",
            "'=='",
            "'~='",
            "'and'",
            "'or'",
            "'not'",
            "'#'"
        };
    }

    private static final String[] _LITERAL_NAMES = makeLiteralNames();

    private static String[] makeSymbolicNames() {
        return new String[] {
            null,
            "LPAREN",
            "RPAREN",
            "COLON",
            "COMMA",
            "DOT",
            "LBRACK",
            "RBRACK",
            "LBRACE",
            "RBRACE",
            "SEMICO",
            "TK_DO",
            "TK_END",
            "TK_WHILE",
            "TK_REPEAT",
            "TK_UNTIL",
            "TK_IF",
            "TK_THEN",
            "TK_ELSE",
            "TK_ELSEIF",
            "TK_FOR",
            "TK_IN",
            "TK_FUNCTION",
            "TK_LOCAL",
            "TK_RETURN",
            "TK_BREAK",
            "TK_NIL",
            "EQUAL",
            "TRUE",
            "FALSE",
            "OP_ADD",
            "OP_SUB",
            "OP_MUL",
            "OP_DIV",
            "OP_MOD",
            "OP_POW",
            "OP_CONCAT",
            "DOTS",
            "TK_LT",
            "TK_LE",
            "TK_GT",
            "TK_GE",
            "TK_EQ",
            "TK_NEQ",
            "TK_AND",
            "TK_OR",
            "TK_NOT",
            "TK_LEN",
            "NAME",
            "NORMALSTRING",
            "CHARSTRING",
            "LONGSTRING",
            "INT",
            "HEX",
            "FLOAT",
            "SHORT_COMMENT",
            "LONG_COMMENT",
            "WS",
            "SHEBANG"
        };
    }

    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override
    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "java-escape";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public LuaParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    @SuppressWarnings("CheckReturnValue")
    public static class FileContext extends ParserRuleContext {
        public ChunkContext chunk() {
            return getRuleContext(ChunkContext.class, 0);
        }

        public TerminalNode EOF() {
            return getToken(LuaParser.EOF, 0);
        }

        public TerminalNode SHEBANG() {
            return getToken(LuaParser.SHEBANG, 0);
        }

        public FileContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_file;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof LuaListener) ((LuaListener) listener).enterFile(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof LuaListener) ((LuaListener) listener).exitFile(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof LuaVisitor) return ((LuaVisitor<? extends T>) visitor).visitFile(this);
            else return visitor.visitChildren(this);
        }
    }

    public final FileContext file() throws RecognitionException {
        FileContext _localctx = new FileContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_file);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(71);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == SHEBANG) {
                    {
                        setState(70);
                        match(SHEBANG);
                    }
                }

                setState(73);
                chunk();
                setState(74);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class ChunkContext extends ParserRuleContext {
        public List<StatContext> stat() {
            return getRuleContexts(StatContext.class);
        }

        public StatContext stat(int i) {
            return getRuleContext(StatContext.class, i);
        }

        public LaststatContext laststat() {
            return getRuleContext(LaststatContext.class, 0);
        }

        public List<TerminalNode> SEMICO() {
            return getTokens(LuaParser.SEMICO);
        }

        public TerminalNode SEMICO(int i) {
            return getToken(LuaParser.SEMICO, i);
        }

        public ChunkContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_chunk;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof LuaListener) ((LuaListener) listener).enterChunk(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof LuaListener) ((LuaListener) listener).exitChunk(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof LuaVisitor) return ((LuaVisitor<? extends T>) visitor).visitChunk(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ChunkContext chunk() throws RecognitionException {
        ChunkContext _localctx = new ChunkContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_chunk);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(82);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (((_la) & ~0x3f) == 0 && ((1L << _la) & 35958568747362562L) != 0) {
                    {
                        {
                            setState(76);
                            stat();
                            setState(78);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                            if (_la == SEMICO) {
                                {
                                    setState(77);
                                    match(SEMICO);
                                }
                            }
                        }
                    }
                    setState(84);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(89);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == TK_RETURN || _la == TK_BREAK) {
                    {
                        setState(85);
                        laststat();
                        setState(87);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        if (_la == SEMICO) {
                            {
                                setState(86);
                                match(SEMICO);
                            }
                        }
                    }
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class BlockContext extends ParserRuleContext {
        public ChunkContext chunk() {
            return getRuleContext(ChunkContext.class, 0);
        }

        public BlockContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_block;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof LuaListener) ((LuaListener) listener).enterBlock(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof LuaListener) ((LuaListener) listener).exitBlock(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof LuaVisitor) return ((LuaVisitor<? extends T>) visitor).visitBlock(this);
            else return visitor.visitChildren(this);
        }
    }

    public final BlockContext block() throws RecognitionException {
        BlockContext _localctx = new BlockContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_block);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(91);
                chunk();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class StatContext extends ParserRuleContext {
        public IfstatContext ifstat() {
            return getRuleContext(IfstatContext.class, 0);
        }

        public WhilestatContext whilestat() {
            return getRuleContext(WhilestatContext.class, 0);
        }

        public BlockstatContext blockstat() {
            return getRuleContext(BlockstatContext.class, 0);
        }

        public FunctionstatContext functionstat() {
            return getRuleContext(FunctionstatContext.class, 0);
        }

        public ForstatContext forstat() {
            return getRuleContext(ForstatContext.class, 0);
        }

        public RepeatstatContext repeatstat() {
            return getRuleContext(RepeatstatContext.class, 0);
        }

        public LocalfunctionstatContext localfunctionstat() {
            return getRuleContext(LocalfunctionstatContext.class, 0);
        }

        public LocalstatContext localstat() {
            return getRuleContext(LocalstatContext.class, 0);
        }

        public PrimaryexpContext primaryexp() {
            return getRuleContext(PrimaryexpContext.class, 0);
        }

        public AssignexprContext assignexpr() {
            return getRuleContext(AssignexprContext.class, 0);
        }

        public StatContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_stat;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof LuaListener) ((LuaListener) listener).enterStat(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof LuaListener) ((LuaListener) listener).exitStat(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof LuaVisitor) return ((LuaVisitor<? extends T>) visitor).visitStat(this);
            else return visitor.visitChildren(this);
        }
    }

    public final StatContext stat() throws RecognitionException {
        StatContext _localctx = new StatContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_stat);
        try {
            setState(103);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 5, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                    {
                        setState(93);
                        ifstat();
                    }
                    break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                    {
                        setState(94);
                        whilestat();
                    }
                    break;
                case 3:
                    enterOuterAlt(_localctx, 3);
                    {
                        setState(95);
                        blockstat();
                    }
                    break;
                case 4:
                    enterOuterAlt(_localctx, 4);
                    {
                        setState(96);
                        functionstat();
                    }
                    break;
                case 5:
                    enterOuterAlt(_localctx, 5);
                    {
                        setState(97);
                        forstat();
                    }
                    break;
                case 6:
                    enterOuterAlt(_localctx, 6);
                    {
                        setState(98);
                        repeatstat();
                    }
                    break;
                case 7:
                    enterOuterAlt(_localctx, 7);
                    {
                        setState(99);
                        localfunctionstat();
                    }
                    break;
                case 8:
                    enterOuterAlt(_localctx, 8);
                    {
                        setState(100);
                        localstat();
                    }
                    break;
                case 9:
                    enterOuterAlt(_localctx, 9);
                    {
                        setState(101);
                        primaryexp();
                    }
                    break;
                case 10:
                    enterOuterAlt(_localctx, 10);
                    {
                        setState(102);
                        assignexpr();
                    }
                    break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class LaststatContext extends ParserRuleContext {
        public LaststatContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_laststat;
        }

        public LaststatContext() {}

        public void copyFrom(LaststatContext ctx) {
            super.copyFrom(ctx);
        }
    }

    @SuppressWarnings("CheckReturnValue")
    public static class ReturnContext extends LaststatContext {
        public TerminalNode TK_RETURN() {
            return getToken(LuaParser.TK_RETURN, 0);
        }

        public List<ExprContext> expr() {
            return getRuleContexts(ExprContext.class);
        }

        public ExprContext expr(int i) {
            return getRuleContext(ExprContext.class, i);
        }

        public List<TerminalNode> COMMA() {
            return getTokens(LuaParser.COMMA);
        }

        public TerminalNode COMMA(int i) {
            return getToken(LuaParser.COMMA, i);
        }

        public ReturnContext(LaststatContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof LuaListener) ((LuaListener) listener).enterReturn(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof LuaListener) ((LuaListener) listener).exitReturn(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof LuaVisitor) return ((LuaVisitor<? extends T>) visitor).visitReturn(this);
            else return visitor.visitChildren(this);
        }
    }

    @SuppressWarnings("CheckReturnValue")
    public static class PlainReturnContext extends LaststatContext {
        public TerminalNode TK_RETURN() {
            return getToken(LuaParser.TK_RETURN, 0);
        }

        public PlainReturnContext(LaststatContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof LuaListener) ((LuaListener) listener).enterPlainReturn(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof LuaListener) ((LuaListener) listener).exitPlainReturn(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof LuaVisitor) return ((LuaVisitor<? extends T>) visitor).visitPlainReturn(this);
            else return visitor.visitChildren(this);
        }
    }

    @SuppressWarnings("CheckReturnValue")
    public static class BreakContext extends LaststatContext {
        public TerminalNode TK_BREAK() {
            return getToken(LuaParser.TK_BREAK, 0);
        }

        public BreakContext(LaststatContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof LuaListener) ((LuaListener) listener).enterBreak(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof LuaListener) ((LuaListener) listener).exitBreak(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof LuaVisitor) return ((LuaVisitor<? extends T>) visitor).visitBreak(this);
            else return visitor.visitChildren(this);
        }
    }

    public final LaststatContext laststat() throws RecognitionException {
        LaststatContext _localctx = new LaststatContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_laststat);
        int _la;
        try {
            setState(116);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 7, _ctx)) {
                case 1:
                    _localctx = new PlainReturnContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                    {
                        setState(105);
                        match(TK_RETURN);
                    }
                    break;
                case 2:
                    _localctx = new ReturnContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                    {
                        setState(106);
                        match(TK_RETURN);
                        setState(107);
                        expr(0);
                        setState(112);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while (_la == COMMA) {
                            {
                                {
                                    setState(108);
                                    match(COMMA);
                                    setState(109);
                                    expr(0);
                                }
                            }
                            setState(114);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                    }
                    break;
                case 3:
                    _localctx = new BreakContext(_localctx);
                    enterOuterAlt(_localctx, 3);
                    {
                        setState(115);
                        match(TK_BREAK);
                    }
                    break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class BlockstatContext extends ParserRuleContext {
        public TerminalNode TK_DO() {
            return getToken(LuaParser.TK_DO, 0);
        }

        public BlockContext block() {
            return getRuleContext(BlockContext.class, 0);
        }

        public TerminalNode TK_END() {
            return getToken(LuaParser.TK_END, 0);
        }

        public BlockstatContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_blockstat;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof LuaListener) ((LuaListener) listener).enterBlockstat(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof LuaListener) ((LuaListener) listener).exitBlockstat(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof LuaVisitor) return ((LuaVisitor<? extends T>) visitor).visitBlockstat(this);
            else return visitor.visitChildren(this);
        }
    }

    public final BlockstatContext blockstat() throws RecognitionException {
        BlockstatContext _localctx = new BlockstatContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_blockstat);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(118);
                match(TK_DO);
                setState(119);
                block();
                setState(120);
                match(TK_END);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }
